# letterboxing-and-its-cuda-acceleration

./: readme.md  yolov5_letterbox_simple.py
yolov5_1_letterbox_simple/: CMakeLists.txt  yolov5_letterbox_simple.cpp
yolov5_2_letterbox_improved/: CMakeLists.txt  yolov5_letterbox_improved.cpp
yolov5_3_letterbox_cuda/: CMakeLists.txt  cuda_utils.h  yolov5_letterbox_cuda.cu
